# VitalSync-AI

./: Makefile  README.md  pyproject.toml
1-Environment/: README.md
5-HuggingFace/: app.py  requirements.txt  style.css
