[project]
name = "vitalsync-ai"
version = "1.0.0"
description = "VitalSync AI: Intelligent Triage Assistant - Bridging the gap between symptoms and care. A professional medical pre-screening and triage system powered by advanced LLM technologies."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kunal Shaw", email = "cs23b1039@iiitr.ac.in" }
]
maintainers = [
    { name = "Kunal Shaw", email = "cs23b1039@iiitr.ac.in" }
]
keywords = [
    "vitalsync",
    "medical-triage",
    "ai-healthcare",
    "symptom-checker",
    "llm",
    "rag",
    "patient-screening",
    "gradio",
    "medical-ai",
    "triage-assistant"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",

    # LangChain ecosystem
    "langchain>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.14,<0.2.0",
    "langchain-core>=0.2.0,<0.3.0",
    "langchain-ibm>=0.1.8,<0.2.0",
    "langchain-community>=0.2.0,<0.3.0",

    # IBM Watson
    "ibm-watson-machine-learning>=1.0.347,<2.0.0",
    "ibm-cos-sdk>=2.13.0,<3.0.0",

    # OpenAI
    "openai>=1.10.0,<2.0.0",
    "tiktoken>=0.5.0,<1.0.0",

    # Vector stores and embeddings
    "faiss-cpu>=1.7.4,<2.0.0",
    "pymilvus>=2.3.0,<3.0.0",
    "sentence-transformers>=2.3.0,<3.0.0",
    "chromadb>=0.3.22,<0.5.0",

    # Gradio for UI
    "gradio>=3.50.0,<5.0.0",

    # Data processing
    "datasets>=2.17.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.4.0,<2.0.0",

    # Document processing
    "PyPDF2>=3.0.0,<4.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "bs4>=0.0.2,<1.0.0",

    # Database and storage
    "pymysql>=1.1.0,<2.0.0",
    "cryptography>=42.0.0,<43.0.0",

    # HTTP and async
    "requests>=2.32.0,<3.0.0",
    "urllib3>=2.1.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "httpx>=0.26.0,<1.0.0",

    # Utilities
    "towhee>=1.1.3,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=1.10.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",

    # Code quality
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",

    # Documentation
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",

    # Jupyter
    "ipykernel>=6.29.0,<7.0.0",
    "notebook>=7.0.0,<8.0.0",
    "ipywidgets>=8.1.0,<9.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
]

gpu = [
    # GPU acceleration
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.37.0,<5.0.0",
]

all = [
    "ai-medical-chatbot[dev,gpu]",
]

[project.urls]
Homepage = "https://github.com/KUNALSHAWW"
Documentation = "https://github.com/KUNALSHAWW/vitalsync-ai"
Repository = "https://github.com/KUNALSHAWW/vitalsync-ai"
"Bug Tracker" = "https://github.com/KUNALSHAWW/vitalsync-ai/issues"
Changelog = "https://github.com/KUNALSHAWW/vitalsync-ai/releases"

[project.scripts]
vitalsync = "src.vitalsync.cli:main"
vitalsync-triage = "src.vitalsync_triage.cli:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "df", "lr"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
